[package]
name = "logger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
chrono = { version = "0.4.32", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
