[package]
name = "logger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["tokio", "macros", "multipart"] }
chrono = { version = "0.4.32", features = ["serde"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres", "rt_tokio_1", "serde"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
